Use gradient for background color

--- a/web/assets/styles/app.css
+++ b/web/assets/styles/app.css
@@ -2,8 +2,9 @@
 @import '@fontsource/roboto-condensed';
 
 body {
-    background-color: lightcyan;
-    color: darkcyan;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    color: lightgrey;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
