--- a/web/assets/styles/app.css
+++ b/web/assets/styles/app.css
@@ -30,6 +30,7 @@ body {
     background: rgb(23,36,44);
     background: linear-gradient(180deg, rgba(23,36,44,1) 1%, rgba(34,47,54,1) 97%);
     border-radius: 5px;
+    margin-bottom: 14px;
     display: block;
     color: #fff;
     text-decoration: none;
