--- a/web/templates/mix/addSong.html.twig
+++ b/web/templates/mix/addSong.html.twig
@@ -9,7 +9,7 @@
 
     <turbo-frame id="add-song-form">
         {{ form_start(form) }}
-            {{ form_row(form.songTitle) }}
+            {{ form_row(form.songTitle, {attr: {autofocus: true}}) }}
             {{ form_row(form.artistName) }}
             {{ form_row(form.length) }}
 
