Show toast when adding a new song to a mix

--- a/web/templates/mix/addSongSucess.stream.html.twig
+++ b/web/templates/mix/addSongSucess.stream.html.twig
@@ -4,3 +4,13 @@
         {{ include('mix/_trackList.html.twig', {mix: mix}) }}
     </template>
 </turbo-stream>
+
+<turbo-stream action="append" target="toast-container">
+    <template>
+        {% embed '_toast.html.twig' %}
+            {% block toast_body %}
+                Track added! Nice!
+            {% endblock %}
+        {% endembed %}
+    </template>
+</turbo-stream>
