--- a/web/templates/base.html.twig
+++ b/web/templates/base.html.twig
@@ -70,6 +70,9 @@
             </footer>
         </div>
         <!-- End Footer -->
-
+        <div
+            id="toast-container"
+            class="toast-container position-fixed top-0 end-0 p-3"
+        ></div>
     </body>
 </html>
