Reimplement the up/down voting with a live component
simpliest example of live reloading with firstName

--- a/web/templates/components/mix_voting.html.twig
+++ b/web/templates/components/mix_voting.html.twig
@@ -1,3 +1,6 @@
 <div{{ attributes }}>
-    <!-- component html -->
+    {{ mix.title }}
+    <hr>
+    <input data-model="firstName">
+    First Name: {{ firstName }}
 </div>
