Add disabled to vote down button if loading takes longer than 100ms

--- a/web/templates/components/mix_voting.html.twig
+++ b/web/templates/components/mix_voting.html.twig
@@ -15,6 +15,7 @@
         <button
             data-action="live#action"
             data-action-name="vote(direction=down)"
+            data-loading="delay(100)|addAttribute(disabled)"
             class="btn btn-outline-primary"
         ><span class="fa fa-thumbs-down"></span></button>
         {% if isVoted %}
