Fix submit of form so that entity gets persisted

--- a/web/templates/registration/register.html.twig
+++ b/web/templates/registration/register.html.twig
@@ -7,7 +7,7 @@
         <div class="row justify-content-center">
             <div class="col-6">
                 <h1>Register</h1>
-                {{ component('registration_form') }}
+                {{ component('registration_form', {form: form}) }}
             </div>
         </div>
     </div>
